before fix footer

--- a/index.html
+++ b/index.html
@@ -707,97 +707,102 @@
               <p>ویدئو</p>
             </div>
             <div class="shadow-box-with-title">
-              <div class="news-list-item">
-                <p>کاهش ۵۵ درصدی بارش های پاییزی در همدان</p>
-                <div class="news-date">
+              <div class="video-list-item">
+                <div class="image-container">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    width="1.2em"
-                    height="1.2em"
-                    viewBox="0 0 24 24"
+                    width="2em"
+                    height="2em"
+                    viewBox="0 0 16 16"
                   >
                     <path
-                      fill="currentColor"
-                      d="M12 20a8 8 0 0 0 8-8a8 8 0 0 0-8-8a8 8 0 0 0-8 8a8 8 0 0 0 8 8m0-18a10 10 0 0 1 10 10a10 10 0 0 1-10 10C6.47 22 2 17.5 2 12A10 10 0 0 1 12 2m.5 5v5.25l4.5 2.67l-.75 1.23L11 13V7z"
+                      fill="#fff"
+                      fill-rule="evenodd"
+                      d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m3.901 7L6 4.066v7.868z"
+                      clip-rule="evenodd"
                     />
                   </svg>
-                  <p>۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</p>
+                  <img src="/img/image01.jpg" alt="" />
+                </div>
+                <div>
+                  <p>کاهش ۵۵ درصدی بارش های پاییزی در همدان</p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
                 </div>
               </div>
-              <div class="news-list-item">
-                <p>ثبت نام ۳۷ داوطلب نمایندگی مجلس در روز سوم در استان همدان</p>
-                <div class="news-date">
+
+              <div class="video-list-item">
+                <div class="image-container">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    width="1.2em"
-                    height="1.2em"
-                    viewBox="0 0 24 24"
+                    width="2em"
+                    height="2em"
+                    viewBox="0 0 16 16"
                   >
                     <path
-                      fill="currentColor"
-                      d="M12 20a8 8 0 0 0 8-8a8 8 0 0 0-8-8a8 8 0 0 0-8 8a8 8 0 0 0 8 8m0-18a10 10 0 0 1 10 10a10 10 0 0 1-10 10C6.47 22 2 17.5 2 12A10 10 0 0 1 12 2m.5 5v5.25l4.5 2.67l-.75 1.23L11 13V7z"
+                      fill="#fff"
+                      fill-rule="evenodd"
+                      d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m3.901 7L6 4.066v7.868z"
+                      clip-rule="evenodd"
                     />
                   </svg>
-                  <p>۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</p>
+                  <img src="/img/image02.jpg" alt="" />
+                </div>
+                <div>
+                  <p>
+                    ثبت نام ۳۷ داوطلب نمایندگی مجلس در روز سوم در استان همدان
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
                 </div>
               </div>
-              <div class="news-list-item">
-                <p>
-                  خانه مطبوعات همدان اختصاص سهمیه بنزین به رسانه ها را پیگیری
-                  میکند
-                </p>
-                <div class="news-date">
+
+              <div class="video-list-item">
+                <div class="image-container">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    width="1.2em"
-                    height="1.2em"
-                    viewBox="0 0 24 24"
+                    width="2em"
+                    height="2em"
+                    viewBox="0 0 16 16"
                   >
                     <path
-                      fill="currentColor"
-                      d="M12 20a8 8 0 0 0 8-8a8 8 0 0 0-8-8a8 8 0 0 0-8 8a8 8 0 0 0 8 8m0-18a10 10 0 0 1 10 10a10 10 0 0 1-10 10C6.47 22 2 17.5 2 12A10 10 0 0 1 12 2m.5 5v5.25l4.5 2.67l-.75 1.23L11 13V7z"
+                      fill="#fff"
+                      fill-rule="evenodd"
+                      d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m3.901 7L6 4.066v7.868z"
+                      clip-rule="evenodd"
                     />
                   </svg>
-                  <p>۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</p>
+                  <img src="/img/image03.jpg" alt="" />
+                </div>
+                <div>
+                  <p>
+                    خانه مطبوعات همدان اختصاص سهمیه بنزین به رسانه ها را پیگیری
+                    میکند
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
                 </div>
               </div>
-              <div class="news-list-item">
-                <p>
-                  کنترل آنلولانزای فوق حاد پرندگان در همدان/ گزارشی ثبت نشه است
-                </p>
-                <div class="news-date">
+              <div class="video-list-item">
+                <div class="image-container">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
-                    width="1.2em"
-                    height="1.2em"
-                    viewBox="0 0 24 24"
+                    width="2em"
+                    height="2em"
+                    viewBox="0 0 16 16"
                   >
                     <path
-                      fill="currentColor"
-                      d="M12 20a8 8 0 0 0 8-8a8 8 0 0 0-8-8a8 8 0 0 0-8 8a8 8 0 0 0 8 8m0-18a10 10 0 0 1 10 10a10 10 0 0 1-10 10C6.47 22 2 17.5 2 12A10 10 0 0 1 12 2m.5 5v5.25l4.5 2.67l-.75 1.23L11 13V7z"
+                      fill="#fff"
+                      fill-rule="evenodd"
+                      d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1m3.901 7L6 4.066v7.868z"
+                      clip-rule="evenodd"
                     />
                   </svg>
-                  <p>۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</p>
+                  <img src="/img/image04.jpg" alt="" />
                 </div>
-              </div>
-              <div class="news-list-item">
-                <p>
-                  اقدامات امنیتی و انتظامی در استان همدان مانع بروز خلا امنیتی
-                  شد
-                </p>
-                <div class="news-date">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="1.2em"
-                    height="1.2em"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      fill="currentColor"
-                      d="M12 20a8 8 0 0 0 8-8a8 8 0 0 0-8-8a8 8 0 0 0-8 8a8 8 0 0 0 8 8m0-18a10 10 0 0 1 10 10a10 10 0 0 1-10 10C6.47 22 2 17.5 2 12A10 10 0 0 1 12 2m.5 5v5.25l4.5 2.67l-.75 1.23L11 13V7z"
-                    />
-                  </svg>
-                  <p>۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</p>
+                <div>
+                  <p>
+                    کنترل آنلولانزای فوق حاد پرندگان در همدان/ گزارشی ثبت نشه
+                    است
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
                 </div>
               </div>
             </div>
@@ -807,72 +812,157 @@
     </div>
     <!-- End 4th section -->
 
-    <!-- Start footer -->
-    <div class="footer-background">
-      <div class="wrapper">
-        <div class="empty-space"></div>
-        <div class="footer">
-          <div class="footer-claim">
-            <img src="/img/logo.png" alt="site logo" />
-            <p>طراحی سایت خبری و خبرگزاری آسام</p>
+    <div class="wrapper">
+      <!-- Start 5th section -->
+      <div class="fiveth-section-container">
+        <div class="fiveth-section-item">
+          <div class="section-title">
+            <p>سیاسی</p>
           </div>
-          <div class="footer-socials">
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1.2em"
-                height="1.2em"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M6.18 15.64a2.18 2.18 0 0 1 2.18 2.18C8.36 19 7.38 20 6.18 20C5 20 4 19 4 17.82a2.18 2.18 0 0 1 2.18-2.18M4 4.44A15.56 15.56 0 0 1 19.56 20h-2.83A12.73 12.73 0 0 0 4 7.27zm0 5.66a9.9 9.9 0 0 1 9.9 9.9h-2.83A7.07 7.07 0 0 0 4 12.93z"
-                />
-              </svg>
-            </a>
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1.2em"
-                height="1.2em"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4zm9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3"
-                />
-              </svg>
-            </a>
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1.2em"
-                height="1.2em"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10s10-4.48 10-10S17.52 2 12 2m4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19c-.14.75-.42 1-.68 1.03c-.58.05-1.02-.38-1.58-.75c-.88-.58-1.38-.94-2.23-1.5c-.99-.65-.35-1.01.22-1.59c.15-.15 2.71-2.48 2.76-2.69a.2.2 0 0 0-.05-.18c-.06-.05-.14-.03-.21-.02c-.09.02-1.49.95-4.22 2.79c-.4.27-.76.41-1.08.4c-.36-.01-1.04-.2-1.55-.37c-.63-.2-1.12-.31-1.08-.66c.02-.18.27-.36.74-.55c2.92-1.27 4.86-2.11 5.83-2.51c2.78-1.16 3.35-1.36 3.73-1.36c.08 0 .27.02.39.12c.1.08.13.19.14.27c-.01.06.01.24 0 .38"
-                />
-              </svg>
-            </a>
-            <a>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1.2em"
-                height="1.2em"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  fill="currentColor"
-                  d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95"
-                />
-              </svg>
-            </a>
+          <div class="shadow-box-with-title">
+            <div class="politic-container">
+              <div class="politic-item">
+                <img src="/img/image01.jpg" alt="an nice landscape" />
+                <div class="politic-news">
+                  <p class="news-title">
+                    کاهش ۵۵ درصدی بارش های پاییزی در همدان
+                  </p>
+                  <p class="news-summary">
+                    همدان - مدیرعامل خانه مطبوعات استان همدان از ارسال ۲ نامه به
+                    معاون سیاسی امنیتی استاندار همان و فرماندار همدان...
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="politic-item">
+                <img src="/img/image02.jpg" alt="an nice landscape" />
+                <div class="politic-news">
+                  <p class="news-pre-title">
+                    جزئیات آخرین آمار بنگاه های مشکل دار/جدول مقایسه ای ۳۱ استان
+                  </p>
+                  <p class="news-title">
+                    ثبت نام ۳۷ داوطلب نمایندگی مجلس در روز سوم در استان همدان
+                  </p>
+                  <p class="news-summary">
+                    همدان - رئیس ستاد انتخابات استان همدان از نامنویسی ۳۷ نفر در
+                    سومین روز از ثبت نام داوطلبان یازدهمین دوره انتخابات ...
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="politic-item">
+                <img src="/img/image03.jpg" alt="an nice landscape" />
+                <div class="politic-news">
+                  <p class="news-pre-title">
+                    ثبت نام ۵۰ داوطلب نمایندگی مجلس در روز چهارم در استان همدان
+                  </p>
+                  <p class="news-title">
+                    خانه مطبوعات همدان اختصاص سهمیه بنزین به رسانه ها را پیگیری
+                    می کند
+                  </p>
+                  <p class="news-summary">
+                    همدان - مدیرعامل خانه مطبوعات استان همدان از ارسال ۲ نامه به
+                    معاون سیاسی امنیتی استاندار همان و فرماندار همدان...
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="politic-item">
+                <img src="/img/image04.jpg" alt="an nice landscape" />
+                <div class="politic-news">
+                  <p class="news-pre-title">سهام ۲۵۴ شرکت در بورس مبادله شد</p>
+                  <p class="news-title">
+                    کنترل فوق حاد آنفولانزای پرندگان/گزارشی ثبت نشده است
+                  </p>
+                  <p class="news-summary">
+                    همدان - مدیرعامل خانه مطبوعات استان همدان از ارسال ۲ نامه به
+                    معاون سیاسی امنیتی استاندار همان و فرماندار همدان...
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="fiveth-section-item">
+          <div class="section-title">
+            <p>اقتصادی</p>
+          </div>
+          <div class="shadow-box-with-title">
+            <div class="economic-container">
+              <div class="economic-item">
+                <img src="/img/image01.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>کاهش ۵۵ درصدی بارش های پاییزی در همدان</p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="economic-item">
+                <img src="/img/image02.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>
+                    ثبت نام ۳۷ داوطلب نمایندگی مجلس در روز سوم در استان همدان
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="economic-item">
+                <img src="/img/image03.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>
+                    خانه مطبوعات همداناختصاص سهمیه بنزین به رسانه ها را پیگیری
+                    میکند
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="economic-item">
+                <img src="/img/image04.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>
+                    کنترل آنفولانزای فوق حاد پرندگان در همدان/گزارشی ثبت نشد است
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="economic-item">
+                <img src="/img/image05.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>
+                    اقدامات امنیتی و انتظامی در استان همدان مانع بروز خلاء
+                    امنیتی شد
+                  </p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="economic-item">
+                <img src="/img/image01.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>شهرستان نهاوند دارای امنیت پایدار است</p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+              <div class="economic-item">
+                <img src="/img/image02.jpg" alt="a beautiful landscape" />
+                <div class="economic-item-news">
+                  <p>اجرای طرح توسعه گردشگری با رویکرد پیشگیری از وقوع جرم</p>
+                  <div class="news-date">۱۳:۱۱ ۱۴۰۱/۰۵/۰۸</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+      <!-- End 5th section -->
+
+      <!-- Start 6th section -->
+      <div class="sixth-section-container"></div>
+      <!-- Start 7th section -->
     </div>
+
+    <!-- Start footer -->
+    <div class="shadow-box"></div>
     <!-- End footer -->
 
     <!-- Start bottom footer -->
