fix menu problem and change splide file name

--- a/index.html
+++ b/index.html
@@ -2239,6 +2239,6 @@
 
     <script></script>
     <script src="/src/js/functions.js" type="text/javascript"></script>
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/splide.js"></script>
   </body>
 </html>
