last mentor check

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                   <div class="navbar-submenu">
                     <ul>
                       <li>
-                        <a href="ایران" title="ایران">ایران</a>
+                        <a href="#" title="ایران">ایران</a>
                       </li>
                       <li>
-                        <a href="جهان" title="جهان">جهان</a>
+                        <a href="#" title="جهان">جهان</a>
                       </li>
                     </ul>
                   </div>
@@ -182,10 +182,10 @@
                   <div class="navbar-submenu">
                     <ul>
                       <li>
-                        <a href="هسته ای" title="هسته ای">هسته ای</a>
+                        <a href="#" title="هسته ای">هسته ای</a>
                       </li>
                       <li>
-                        <a href="پزشکی" title="پزشکی">پزشکی</a>
+                        <a href="#" title="پزشکی">پزشکی</a>
                       </li>
                     </ul>
                   </div>
